--- a/server.cfg
+++ b/server.cfg
@@ -28,7 +28,7 @@ sets tags "roleplay, rp, fr, qc, blg, rp strict, esx, custom cars, custom, drugs
 sv_scriptHookAllowed 0
 
 set onesync on  # Enable OneSync [REQUIRED FOR LEGACY 1.7.5 +]
-set mysql_connection_string "server=localhost;uid=root;password=;database=pablo"
+set mysql_connection_string "server=localhost;uid=root;password=;database="
 set mysql_ui true
 
 setr esx:locale "fr"
