--- a/server.cfg
+++ b/server.cfg
@@ -16,8 +16,8 @@ sv_endpointPrivacy true
 
 sv_hostname "[FR] ^1Pablo ^9| 👊 ^2DEV ^9| 🔊 ^0discord.gg/pablodev"
 # sv_hostname "Base Pablo |   discord.gg/Dxcxv64jmd"
-set steam_webApiKey "31F39CFA81DE155F3571D7740D791D57"
-sv_licenseKey "cfxk_1oJiWgmEdL5grGUIKSqPF_2itgsb"
+set steam_webApiKey ""
+sv_licenseKey ""
 sv_maxclients 32   # Allow access to features usually locked behind a FiveM patreon key
 
 set sv_enforceGameBuild 2802
